# rtaskmgr

./: .gitignore  Cargo.toml  RUST_MIGRATION.md  build.rs  rust_taskmgr.rc  sysmon.manifest  taskmgr.sln  taskmgr.vcxproj  taskmgr.vcxproj.filters
.cargo/: config.toml
scripts/: release-clean.ps1
src/: app.rs  app_controllers.rs  assets.rs  chart_renderer.rs  dialog_templates.rs  language.rs  localization.rs  localization_terms.rs  localization_ui.rs  main.rs  menus.rs  netpage.rs  options.rs  pages.rs  perf_layout.rs  perfpage.rs  procpage.rs  resource.rs  runtime_menu.rs  taskpage.rs  userpage.rs  winutil.rs
src/localization/: de.rs  en_us.rs  es.rs  fr.rs  pt.rs  ru.rs  text_key.rs  zh_cn.rs  zh_tw.rs
