[package]
name = "sysmon"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
debug-assertions = false
incremental = false
overflow-checks = false

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Globalization",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_RemoteDesktop",
    "Win32_System_Shutdown",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_VirtualDosMachines",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
